# subgraph_matching

./: CMakeLists.txt  package.xml
include/subgraph_matching/: FullSearch.hpp  GradientDescent.hpp  graph_util.hpp
include/subgraph_matching/graph/: Edge.hpp  Graph.hpp  Node.hpp  SubgraphMatcherBase.hpp  TransformEstimatorBase.hpp
src/graph/: graph_utility.cpp
